--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root{
+    --text-color: #dbe4ef;
+    --card-front-color: #144480;
+    --card-back-color: #00f4bf;
+}
+
 body{
     background-color: bisque;
     font-family: "Bai Jamjure", sans-serif;
@@ -16,12 +22,14 @@ body{
 }
 
 .cartao__conteudo{
+    background-color: var(--card-front-color);
     text-align: center;
     height: 100%;
 }
 
 .cartao__conteudo h3{
-    background-color: tomato;
+    color:var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
@@ -29,6 +37,15 @@ body{
     border-radius: 0.6rem;
     font-size: 1vw;
 
+}
+.cartao__conteudo p{
+    margin-top: 1rem;
+    padding: 2rem;
+}
+
+.cartao__conteudo__pergunta p{
+    color: var(--card-back-color);
+    font-weight: 500;
 }
 
 footer{
