--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     font-family: "Bai Jamjure", sans-serif;
 }
 
-#container>{
+#container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
