--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     --text-color: #dbe4ef;
     --card-front-color: #144480;
     --card-back-color: #00f4bf;
+    --cor-da-borda:#1509f5;
+    --cor-fundo-cartao:#f10707;
 }
 
 body{
@@ -48,6 +50,7 @@ body{
     margin-top: 1rem;
     padding: 2rem;
     margin-top: 4rem;
+    font-size: 3vw;
 }
 
 .cartao__conteudo__pergunta p{
@@ -60,7 +63,7 @@ body{
         font-weight: 700;
     }
 
-    .cartao:hover .cartao__conteudo{
+    .cartao:active .cartao__conteudo{
         transform: rotateY(180deg);
     }
 
@@ -70,10 +73,13 @@ body{
         position: absolute;
         height: 100%;
         width: 100%;
+        box-sizing: border-box;
     }
 
     .cartao__conteudo__resposta{
         transform: rotateY(180deg);
+        background-color: #00f4bf;
+        border: 4px solid var(--cor-da-borda);
     }
 
 footer{
