--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
-    --text-color: #dbe4ef;
-    --card-front-color: #144480;
+    --text-color: #ffffff;
+    --card-front-color: #5e1480;
     --card-back-color: #0062f4;
     --cor-da-borda:#1509f5;
     --cor-fundo-cartao:#f10707;
