--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
     --text-color: #ffffff;
-    --card-front-color: #5e1480;
+    --card-front-color: #b80f0f;
     --card-back-color: #0062f4;
     --cor-da-borda:#1509f5;
-    --cor-fundo-cartao:#f10707;
+    --cor-fundo-cartao:#178f97;
 }
 
 body{
@@ -78,7 +78,7 @@ body{
 
     .cartao__conteudo__resposta{
         transform: rotateY(180deg);
-        background-color: #00f4bf;
+        background-color: #e3f304;
         border: 4px solid var(--cor-da-borda);
     }
 
