--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --text-color: #ffffff;
-    --card-front-color: #b80f0f;
+    --card-front-color: #000000;
     --card-back-color: #0062f4;
     --cor-da-borda:#1509f5;
     --cor-fundo-cartao:#178f97;
