--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 :root{
     --text-color: #ffffff;
-    --card-front-color: #000000;
+    --card-front-color: #5c07a1dc;
     --card-back-color: #0062f4;
     --cor-da-borda:#1509f5;
     --cor-fundo-cartao:#178f97;
 }
 
 body{
-    background-color: bisque;
+    background-color: rgb(2, 255, 23);
     font-family: "Bai Jamjure", sans-serif;
 }
 
