--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --text-color: #ffffff;
     --card-front-color: #5c07a1dc;
-    --card-back-color: #0062f4;
+    --card-back-color: #f3f3f3;
     --cor-da-borda:#1509f5;
     --cor-fundo-cartao:#178f97;
 }
