--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --text-color: #ffffff;
     --card-front-color: #5c07a1dc;
     --card-back-color: #f3f3f3;
-    --cor-da-borda:#1509f5;
+    --cor-da-borda:#f55409;
     --cor-fundo-cartao:#178f97;
 }
 
