--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --card-front-color: #5c07a1dc;
     --card-back-color: #f3f3f3;
     --cor-da-borda:#f55409;
-    --cor-fundo-cartao:#178f97;
+    --cor-fundo-cartao:#c40707;
 }
 
 body{
