--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body{
 
     .cartao__conteudo__resposta{
         transform: rotateY(180deg);
-        background-color: var(--cor-fundo-cartao)
+        background-color: #c40707
         border: 4px solid var(--cor-da-borda);
     }
 
