--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ footer p {
     margin-top: 0.5rem;
 }
 
-@media (max-widtb: 560px){
+@media (max-width: 560px){
     body{
         background-color: khaki;
     }
